# esp-components

./: .gitignore  README.md
awesome-led/: CMakeLists.txt  awesome-led.c
grove_lcd/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  grove_lcd.c  idf_component.yml
hp203b/: CHANGELOG.md  CMakeLists.txt  Kconfig  MIGRATION.md  README.md  idf_component.yml
lc709203/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  lc709203.c
lis3dh/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  lis3dh.c
max17043/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  max17043.c
mc3479/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  mc3479.c
nt3h2111/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  license.txt  nt3h2111.c
sgp30/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  sgp30.c
sgp30/examples/sgp30_read/: CMakeLists.txt  README.md
sgp30/examples/sgp30_read/main/: CMakeLists.txt  idf_component.yml  sgp30_read.c
sgp30/include/: sgp30.h
sht2x/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  sht2x.c
sht4x/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sht4x.c
shtc3/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  shtc3.c
st25dv/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  license.txt  st25dv.c
t9602/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  t9602.c
template/: CMakeLists.txt  README.md  idf_component.yml  template.c
tmc2208/: CMakeLists.txt  Kconfig  (+4 more)
(+138 files in other folders)
